--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -1,11 +1,11 @@
 tests_config:
 
 ##################################### MY DASHBOARD TESTS ########################################
-- module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_module.Test_My_Dashboard_Actions
-  class: MyDashboardActionsTest
-  tests:
+#- module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_module.Test_My_Dashboard_Actions
+#  class: MyDashboardActionsTest
+#  tests:
 #    - test_edit_event_my_dashboard
-    - test_email_icon
+#    - test_email_icon
 #    - test_sms_icon
 #    - test_sorting_columns
 #    - test_searching_by_columns
@@ -27,10 +27,10 @@ tests_config:
 #    - test_crm_configurations_pages_loading
 #
 ######################################### FILTERS TESTS ###############################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_create_filters.Test_Create_Filter
-#  class: FilterModulesTest
-#  tests:
-#    - test_create_filter_clients_module
+- module: src.test.python.ui.automation.implementation.crm.tests_create_filters.Test_Create_Filter
+  class: FilterModulesTest
+  tests:
+    - test_create_filter_clients_module
 #    - test_create_filter_documents_module
 #    - test_create_filter_leads_module
 #    - test_create_filter_help_desk
