--- a/src/main/python/ui/crm/model/BrandsXpath/aztrades_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/aztrades_xpath.yml
@@ -1,3 +1,5 @@
+ClientsPage:
+  client_phone: "//span[@id='dtlview_Phone']/div[@class='actions_btn']"
 ClientProfilePage:
   deposit_sum: "//tr[@class='lvtColData'][2]//td[3]"
 LeadsModule:
