--- a/src/test/python/resources/config/Brands/b-finance.yml
+++ b/src/test/python/resources/config/Brands/b-finance.yml
@@ -1,3 +1,4 @@
 pretty_name: "B-finance"
 url: "https://b-finance.ptscrm.com/"
+url_ca: "https://www.b-finance.com/#/"
 otp_secret: TYP45DNKQL6JGIJX
