--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -1,5 +1,46 @@
 tests_config:
 
+########################################## CA TESTS ##############################################
+- module: src.test.python.ui.automation.implementation.ca.Test_SignUp
+  class: SignUpTest
+  tests:
+    - test_check_sign_up
+    - test_check_email_sign_up
+    - test_registred_client_exist_in_crm
+#
+#- module: src.test.python.ui.automation.implementation.ca.Test_Add_New_Accounts
+#  class: AddNewAccountTestCA
+#  tests:
+#    - test_add_live_account_ca
+#    - test_add_demo_account_ca
+#    - test_verify_accounts_in_crm
+#    - test_switch_between_accounts_ca
+#
+#- module: src.test.python.ui.automation.implementation.ca.Test_Personal_Details_Update
+#  class: PersonalDetailsUpdateTestCA
+#  tests:
+#    - test_update_personal_details_in_ca
+#    - test_personal_details_were_updated_in_crm
+#    - test_update_personal_details_in_crm
+#    - test_personal_details_were_updated_in_ca
+#
+#- module: src.test.python.ui.automation.implementation.ca.Test_Support_Ticket
+#  class: CreateSupportTicketTestCa
+#  tests:
+#    - test_create_ticket
+#    - test_check_and_update_ticket_in_crm
+#    - test_check_updated_ticket_in_ca
+
+#- module: src.test.python.ui.automation.implementation.ca.Test_Stratton_Questionnaire
+#  class: StrattonQuestionnaire
+#  tests:
+#    - test_customer_classification_empty
+#    - test_customer_classification_blocked
+#    - test_customer_classification_negative
+#    - test_customer_classification_retail
+#    - test_customer_classification_professional_eligible
+#    - test_customer_classification_professional_elective
+
 ###################################### MY DASHBOARD TESTS ########################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_module.Test_My_Dashboard_Actions
 #  class: MyDashboardActionsTest
