--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -6,8 +6,8 @@ brands:
 #- name: ptbanc
 #  config_file: ptbanc.yml
 
-- name: trade99
-  config_file: trade99.yml
+#- name: trade99
+#  config_file: trade99.yml
 
 #- name: gigafx
 #  config_file: gigafx.yml
@@ -20,3 +20,6 @@ brands:
 
 #- name: strattonmarkets-eu
 #  config_file: strattonmarkets-eu.yml
+
+- name: newforexstage2
+  config_file: newforexstage2.yml
