--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -8,19 +8,19 @@ brands:
 
 #- name: q8
 #  config_file: q8.yml
-#
+
 #- name: kontofx
 #  config_file: kontofx.yml
-#
+
 #- name: brokerz
 #  config_file: brokerz.yml
-#
+
 #- name: gigafx
 #  config_file: gigafx.yml
-#
+
 #- name: trade99
 #  config_file: trade99.yml
-#
+
 #- name: dax-300
 #  config_file: dax-300.yml
 
@@ -57,5 +57,14 @@ brands:
 #- name: globalix
 #  config_file: globalix.yml
 
-- name: libramarkets
-  config_file: libramarkets.yml
+#- name: libramarkets
+#  config_file: libramarkets.yml
+
+#- name: swisscci
+#  config_file: swisscci.yml
+
+#- name: jonesmutual
+#  config_file: jonesmutual.yml
+
+- name: uprofx
+  config_file: uprofx.yml
