--- a/src/test/python/resources/config/brands4.yml
+++ b/src/test/python/resources/config/brands4.yml
@@ -6,5 +6,5 @@ brands:
 - name: ptbanc
   config_file: ptbanc.yml
 
-- name: 2mercados
-  config_file: 2mercados.yml
+#- name: 2mercados
+#  config_file: 2mercados.yml
