--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,7 +1,7 @@
 brands:
 
-#- name: newforexstage2
-#  config_file: newforexstage2.yml
+- name: newforexstage2
+  config_file: newforexstage2.yml
 
 #- name: ptbanc
 #  config_file: ptbanc.yml
@@ -66,5 +66,5 @@ brands:
 #- name: jonesmutual
 #  config_file: jonesmutual.yml
 
-- name: uprofx
-  config_file: uprofx.yml
+#- name: uprofx
+#  config_file: uprofx.yml
