--- a/src/test/python/resources/config/tests9.yml
+++ b/src/test/python/resources/config/tests9.yml
@@ -11,6 +11,7 @@ tests_config:
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Mass_Edit
   class: MassEditTestCRM
   tests:
+    - test_update_client_details
     - test_clients_mass_edit
 
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Mass_Assign
