--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -2,15 +2,15 @@ brands:
 
 #- name: kayafx
 #  config_file: kaya_fx.yml
-#
+
 #- name: itrader
 #  config_file: itrader.yml
-#
+
 - name: gmo
   config_file: gmo.yml
-#
-#- name: brokerxp
-#  config_file: brokerxp.yml
-#
+
+- name: brokerxp
+  config_file: brokerxp.yml
+
 #- name: forex_staging
 #  config_file: forex_staging.yml
