--- a/src/test/python/resources/config/tests10.yml
+++ b/src/test/python/resources/config/tests10.yml
@@ -4,7 +4,6 @@ tests_config:
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Mass_Edit
   class: MassEditTestCRM
   tests:
-    - test_update_client_details
     - test_clients_mass_edit
 
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Mass_Assign
@@ -36,3 +35,8 @@ tests_config:
   class: TradingAccountCrmTest
   tests:
     - test_crm_edit_trading_account  # edit trading account
+
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Mass_Edit
+  class: MassEditTestCRM
+  tests:
+    - test_update_client_details
