--- a/src/test/python/resources/config/tests_ca.yml
+++ b/src/test/python/resources/config/tests_ca.yml
@@ -31,11 +31,11 @@ tests_config:
     - test_check_and_update_ticket_in_crm
     - test_check_updated_ticket_in_ca
 
-- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Dragon
-  class: CheckDragonTest
-  tests:
-    - test_ca_dragon_valid_phone
-    - test_ca_dragon_invalid_phone
+#- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Dragon
+#  class: CheckDragonTest
+#  tests:
+#    - test_ca_dragon_valid_phone
+#    - test_ca_dragon_invalid_phone
 
 #- module: src.test.python.ui.automation.implementation.ca.Test_Stratton_Questionnaire
 #  class: StrattonQuestionnaire
