--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -210,8 +210,8 @@ tests_config:
     - test_sorting
 
 ############################################ DRAGON TESTS ###############################################
-- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Dragon
-  class: CheckDragonTest
-  tests:
-    - test_dragon_leads
-    - test_dragon_clients
+#- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Dragon
+#  class: CheckDragonTest
+#  tests:
+#    - test_dragon_leads
+#    - test_dragon_clients
