--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -1,6 +1,5 @@
 tests_config:
 
-
 - module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
   directive: reload_configuration
   class: LeadModuleTest
@@ -18,7 +17,7 @@ tests_config:
     - test_api_create_new_lead
     - test_api_create_new_customer
 
-- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Check_Modules
-  class: CheckModules
-  tests:
-    - test_check_sprint_version
+#- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Check_Modules
+#  class: CheckModules
+#  tests:
+#    - test_check_sprint_version
