--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -55,11 +55,11 @@ tests_config:
 #  tests:
 #    - test_make_searching_client_module   # Searches for a client
 #
-- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Mass_Edit
-  class: MassEditTestCRM
-  tests:
+#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Mass_Edit
+#  class: MassEditTestCRM
+#  tests:
 #    - test_update_client_details
-    - test_clients_mass_edit
+#    - test_clients_mass_edit
 #
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Mass_Assign
 #  class: MassAssignTestCRM
@@ -67,12 +67,12 @@ tests_config:
 #    - test_clients_mass_assign
 #
 ###################################### TASKS ##################################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Event
-#  class: AddEventTaskModule
-#  tests:
+- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Event
+  class: AddEventTaskModule
+  tests:
 #    - test_email_icon
 #    - test_sms_icon
-#    - test_mass_edit_tasks
+    - test_mass_edit_tasks
 #    - test_searching_by_columns
 #    - test_sorting_columns
 #
