--- a/src/main/python/ui/crm/model/BrandsXpath/default.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/default.yml
@@ -10,6 +10,37 @@ ClientsPage:
   client_country: "//span[@id='dtlview_Country']"
   client_citizenship: "//span[@id='dtlview_Citizenship']"
   citizenship: "//select[@id='citizenship']/option[contains(text(), '%s')]"
+ConvertLeadModule:
+  first_name_field: "//input[@name='account[FirstName]']"
+  last_name_field: "//input[@name='account[LastName]']"
+  email_field: "//input[@name='account[Email]']"
+  phone_field: "//input[@name='account[Phone]']"
+  referral_field: "//input[@name='account[Referral]']"
+  postal_code_field: "//input[@name='account[PostalCode]']"
+  city_field: "//input[@name='account[City]']"
+  address_field: "//input[@name='account[Address]']"
+  password_field: "//input[@name='account[Password]']"
+  source_name_field: "//input[@name='account[SourceName]']"
+  convert_lead_btn: "//div[@class='modal-footer new-modal-footer']//button[contains(.,'Submit')]"
+CreateLeadsProfilePage:
+  first_name_field: "//input[@name='firstname']"
+  last_name_field: "//input[@name='lastname']"
+  mobile_field: "//input[@name='mobile']"
+  email_field: "//input[@name='email']"
+  secondary_email_field: "//input[@name='secondaryemail']"
+  panda_partner_id_field: "//input[@name='pandapartnerid']"
+  phone_field: "//input[@name='phone']"
+  tittle_field: "//input[@name='designation']"
+  street_field: "//textarea[@name='lane']"
+  referral_field: "//textarea[@name='refferal']"
+  postal_code_field: "//input[@name='code']"
+  city_field: "//input[@name='city']"
+  description_field: "//textarea[@name='description']"
+  state_field: "//input[@name='state']"
+  language_field: "//input[@name='cf_1092']"
+  fax_field: "//input[@name='fax']"
+  source_name_field: "//input[@name='sourcename']"
+  save_button: "//input[@title='Save [Alt+S]']"
 TasksPage:
   pencil_button: "/html/body/app-root/tasks-list/div/div[2]/div/grid/div[2]/div/div[1]/table/tbody/tr[2]/td[18]/div[5]/div/span"
   subject_input: "//tr[@class='tableFilters']//td[15]//input"
@@ -25,6 +56,7 @@ ClientProfilePage:
   deposit_sum: "//tr[@class='lvtColData'][1]//td[3]"
   i_confirm_checkbox: "//*[@name='confirm']"
   email: "//td[contains(text(),'Email')]//following-sibling::td[1]"
+  mt4_button: "//div[@class='mt4_act_box']"
 CRMClientDeposit:
   i_confirm_checkbox: "//*[@name='confirm']"
 AffiliatePage:
@@ -44,6 +76,11 @@ LeadsModule:
   check_first_line_leads_no2: "//tbody[@id = 'listBody']/tr[2]/td[3]"
   edit_status: "//*[@id='leadstatus_mass_edit_check']/div[1]/div"
   mass_edit_leads: "//*[@id='list_action_buttons']/input[2]"
+  create_lead_module: "//td[@class='moduleName']//button[1]"
+  email_field: "//tr[@name='customAdvanceSearch']//input[@name='tks_email']"
+  lead_no: "//a[contains(text(),'LEA')]"
+LeadViewInfo:
+  convert_lead_btn: "//a[contains(@onclick,'ConvertLead')]"
 CALoginPage:
   sign_up: "//button[contains(text(), 'Sign Up')]"
   check_box_accept: "//span[contains (text(), 'Terms and Conditions')]"
@@ -85,4 +122,5 @@ WebTraderPage:
   check_button: "//panda-forex-trading-platform/div/div/div/div[2]/div[2]/sltp-popup/div/div[2]/div[2]/div[3]/div[1]/label"
   enter_stop_loss: "//panda-forex-trading-platform/div/div/div/div[2]/div[2]/sltp-popup/div/div[2]/div[2]/div[4]/div[1]/custom-input/div/input"
   pips_bottom_panel_test: "//panda-forex-trading-platform/div/div/div/div[2]/div[2]/sltp-popup/div/div[2]/div[2]/div[6]/div[1]/div/div"
-
+CRMHomePage:
+  leads_module_btn: "//span[@class='glyphicon glyphicon-Leads']"
