--- a/src/test/python/resources/config/tests9.yml
+++ b/src/test/python/resources/config/tests9.yml
@@ -5,7 +5,7 @@ tests_config:
   directive: reload_configuration
   class: LeadModuleTest
   tests:
-    - test_convert_lead_short   # Creates a lead and converts it to a client(short scenario)
+    - test_perform_convert_lead   # Creates a lead and converts it to a client
 
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
   class: TradingAccountCrmTest
