--- a/src/test/python/resources/config/tests8.yml
+++ b/src/test/python/resources/config/tests8.yml
@@ -1,5 +1,11 @@
 tests_config:
 
+#################################### CLIENTS ###############################################
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Mass_Edit
+  class: MassEditTestCRM
+  tests:
+    - test_clients_mass_edit
+
 ####################################### AFFILIATES MODULE ##########################################
 - module: src.test.python.ui.automation.implementation.crm.tests_affiliates_module.Test_Affiliates_Module
   class: AffiliateModule
@@ -15,10 +21,6 @@ tests_config:
     - test_check_search_via_button # Check search using search button
 
 #################################### CLIENTS ###############################################
-- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Mass_Edit
-  class: MassEditTestCRM
-  tests:
-    - test_clients_mass_edit
 
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Mass_Assign
   class: MassAssignTestCRM
