--- a/src/test/python/resources/config/default.yml
+++ b/src/test/python/resources/config/default.yml
@@ -9,6 +9,7 @@ FirstLeadInfo:
   mobile: "8888888"
   fax: "5555"
   EVAL_email: "'pandaqa+' + (datetime.utcnow().strftime('%Y%m%d%H%M%S%f')) + '@pandats.com'"
+  EVAL_email_short: "'pandaqa+sh' + (datetime.utcnow().strftime('%Y%m%d%H%M%S%f')) + '@pandats.com'"
   secondary_email: "secondarytestqa+1@pandats.com"
   first_language: "English"
   panda_partner_id:
@@ -89,6 +90,9 @@ client_1:
   phone: "7777777"
   phone_area_code: 111
   birthday: "1971-01-01"
+  day: "1"
+  month: "JAN"
+  year: "1971"
   country: "Germany"
   first_country: "Germany"
   street: "My street"
