--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -215,5 +215,5 @@ tests_config:
 - module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Dragon
   class: CheckDragonTest
   tests:
-    - test_dragon_leads
+#    - test_dragon_leads
     - test_dragon_clients
